fix(handwriting): set width/height to 100% on layout-handwriting to prevent relative canvas collapse (v181)

--- a/css/style.css
+++ b/css/style.css
@@ -1198,6 +1198,11 @@ math-field::part(virtual-keyboard-toggle) {
   height: 260px !important;
 }
 
+#layout-handwriting {
+  width: 100%;
+  height: 100%;
+}
+
 .hw-keyboard-container {
   position: relative;
   width: 100%;
